
-API:
    -Major performance improvements for the multi-thread use case, where JLanguageTool
     gets created per thread, but the language object (e.g. 'German') gets
     created only once. Overhead for creating JLanguageTool should now be much lower.
    -Removed several classes and methods that had been deprecated since version 2.6
    -The signature of Language.getRelevantRules() has changed
    -The JLanguageTool and MultiThreadedJLanguageTool constructors don't declare to
     throw an IOException anymore
    -WhitespaceRule has been renamed to MultipleWhitespaceRule (WhitespaceRule
     still exists but has been deprecated)
    -Deprecated some methods whose visibility will be decreased (e.g. from public
     to protected)
    -MorfologikSpellerRule.getRuleMatch(String, int) has been renamed to
     MorfologikSpellerRule.getRuleMatches(String, int)
    -The RuleMatch constructor now throws an exception if toPosition is not
     larger than fromPosition
    -Introduced a new abstract class TextLevelRule that extends Rule and that
     can be used for rules that cover more than single sentences.

-Command line:
    -Enabling and disabling specific rules at the same time is now allowed.
     In order to test only some rules (disabling all the rest), which previously was done
     with "--enable LIST_OF_RULES", now use "--enabledonly --enable LIST_OF_RULES"
     (or "-eo -e LIST_OF_RULES").

-Embedded server:
    -Two new options can be set in the properties file to make LanguageTool
     return the same XML format as After the Deadline (AtD). This way it can be used
     as a drop-in replacement for AtD:
     * mode - 'LanguageTool' or 'AfterTheDeadline'
     * afterTheDeadlineLanguage - code of default language if mode is set to 'AfterTheDeadline'
     NOTE: the 'AfterTheDeadline' mode should be considered experimental for now.
    -The new option 'maxCheckThreads' allows setting the maximum number of threads working