@@ -64,11 +64,6 @@
             <artifactId>languagetool-core</artifactId>
             <version>${languagetool.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.languagetool</groupId>
-            <artifactId>hunspell-native-libs</artifactId>
-            <version>${languagetool.version}</version>
-        </dependency>
 
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
