@@ -1,37 +1,0 @@
-/* LanguageTool, a natural language style checker
- * Copyright (C) 2013 Daniel Naber (http://www.danielnaber.de)
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
- * USA
- */
-package org.languagetool.rules.nl;
-
-import org.languagetool.Language;
-import org.languagetool.rules.spelling.hunspell.HunspellNoSuggestionRule;
-
-import java.util.ResourceBundle;
-
-public class DutchSpellerRule extends HunspellNoSuggestionRule {
-
-  public DutchSpellerRule(ResourceBundle messages, Language language) {
-    super(messages, language);
-  }
-
-  @Override
-  public String getId() {
-    return "DUTCH_SPELLER_RULE";
-  }
-
-}
