@@ -103,6 +103,7 @@ LanguageTool Change Log
      gets created per thread, but the language object (e.g. 'German') gets
      created only once. Overhead for creating JLanguageTool should now be much lower.
     -Removed several classes and methods that had been deprecated since version 2.6
+    -Removed DutchSpellerRule - use MorfologikDutchSpellerRule instead
     -The signature of Language.getRelevantRules() has changed
     -The JLanguageTool and MultiThreadedJLanguageTool constructors don't declare to
      throw an IOException anymore
